# bdd

./: .editorconfig  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Makefile  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  readme.md  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: codeql.yml  docs.yml  pre-commit.yml
api/: index.html
contribute/: index.html
contribute/docs/: index.html
contribute/orm/: index.html
contribute/rest_api/: index.html
dockerfiles/: docker-compose.dev.yml  docker-compose.prod.yml
dockerfiles/services/api/: Dockerfile  Dockerfile.dev  Dockerfile.prod
dockerfiles/services/docs/: Dockerfile.dev
dockerfiles/services/server/: Dockerfile.prod  nginx.conf  nginx.conf.dev  nginx.conf.prod
dockerfiles/services/server-dev/: nginx.conf
docs/: api.md  index.md
docs/assets/: extra.css
docs/contribute/: docs.md  index.md  orm.md  rest_api.md
docs/models/: index.md  subject.md
docs/sources/: almapp.md  buscacursos.md  calendario_academico.md  catalogo.md  index.md  uc.md
models/: index.html
scripts/: backupdb  createdb  restoredb  seed_db.py
scripts/docker/: backupdb  restoredb  seeddb
scripts/fullscrapers/: __init__.py  buscacursos.py  catalogo.py
search/: search_index.json
sources/: index.html
sources/almapp/: index.html
sources/buscacursos/: index.html
sources/calendario_academico/: index.html
sources/catalogo/: index.html
sources/uc/: index.html
src/: config.py
src/api/: main.py  models.py  readme.md  utils.py
src/api/graphql/: __init__.py
src/api/graphql/definitions/: campus.py  subject.py
src/api/routes/: campus.py  courses.py  events.py  faculties.py  places.py  schools.py  search.py  subject.py  teachers.py  terms.py
src/db/: __init__.py  events.py  places.py  schema.py  subject.py  term.py
src/scrapers/: __init__.py  buscacursos.py  catalogo.py  description.py  types.py  utils.py
src/scrapers/jobs/: __init__.py  buscacursos.py  catalogo.py  code_iterator.py
tests/: prerequisites_test.py  test_prerequisites.py
