[tool.black]
line-length = 100

[tool.poetry]
name = "BDDUC"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.4"
psycopg2 = "^2.9.1"
fastapi = "^0.70.0"
strawberry-graphql = "^0.85.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
strawberry-graphql = {extras = ["debug-server"], version = "^0.85.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
