[tool.black]
line-length = 100

[tool.poetry]
name = "BDDUC"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = {extras = ["psycopg2"], version = "^0.0.4"}
psycopg2 = "^2.9.1"
fastapi = "^0.70.0"
strawberry-graphql = "^0.85.0"
fastapi-pagination = {extras = ["SQLAlchemy"], version = "^0.9.0"}
mkdocs-material = "^7.3.4"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
python-dotenv = "^0.19.1"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
strawberry-graphql = {extras = ["debug-server"], version = "^0.85.0"}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
